@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.206 2005/12/05 01:09:41 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.207 2005/12/05 01:35:14 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
@@ -14,6 +14,7 @@
   Bootloader screen allows for selection of boot_device if bootloader in MBR
   Bootloader screen allows user to specify extra kernel args
   bootsplash option on Kernel screen
+  rewrote Kernel.py to be more modular and added hardened- and grsec-sources
 
   3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added CC networking pre-loading to Networking screen
